# skygarage_02

./: index.html  package-lock.json  package.json
.claude/commands/: skygarage-admin-page.md  skygarage-arch.md
public/: manifest.json  sw.js
skygarage_arch/: pyproject.toml
skygarage_arch/network/: hierarchical_rpc.py
skygarage_arch/security/: context_switcher.py  tenant_isolation.py
skygarage_arch/tests/: test_context_switcher.py  test_hierarchical_security.py
skygarage_core/actuator/: unit_gate_control.py
skygarage_core/localization/: ekf_fusion.py
skygarage_core/scheduler/: multi_zone_engine.py
skygarage_core/tests/: test_ekf_localization.py  test_multi_zone_scheduler.py  test_unit_gate_control.py
skygarage_diagnostic/harness/: phm_chain.py
skygarage_diagnostic/tests/: test_phm_chain.py
skygarage_integration/billing/: clearing_engine.py
skygarage_integration/tests/: test_clearing_engine.py
src/: App.tsx  index.css  main.tsx  theme.ts  vite-env.d.ts
src/admin/: AdminLayout.tsx
src/components/: ATRSection.tsx  BadgeImageZone.tsx  BenefitsSection.tsx  BrandGuidePage.tsx  BrandStorySection.tsx  ComparisonSection.tsx  ContactSection.tsx  Footer.tsx  HeroSection.tsx  ImageEditOverlay.tsx  LoadingScreen.tsx  MarketSection.tsx  Navbar.tsx  PainPointSection.tsx  PalatriaLanding.tsx  PatentPage.tsx  ProcessSection.tsx  SectionMediaStrip.tsx  SkyGarageValet.tsx  SolutionSection.tsx  ThreeModesSection.tsx  TrustSection.tsx
src/constants/: imageLayout.ts  images.ts
src/domain/: access-map.ts  events.ts  index.ts  roles.ts
src/lib/: env.ts  (+2 more)
(+266 files in other folders)
